# Interface-IA-cancelaciondesonido-main

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  uso_argumentos.py  uso_argumentosNR.py  wave_u_net_model32044100encoder.keras
